--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -3,4 +3,46 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="Process_EmpresaSoap" />
+                <binding name="Process_CuentaSoap" />
+                <binding name="Process_UsuarioSoap" />
+                <binding name="Process_RolSoap" />
+            </basicHttpBinding>
+            <customBinding>
+                <binding name="Process_EmpresaSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+                <binding name="Process_CuentaSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+                <binding name="Process_UsuarioSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+                <binding name="Process_RolSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+            </customBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:52755/Process_Empresa.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_EmpresaSoap"
+                contract="ServiceProcess_Empresa.Process_EmpresaSoap" name="Process_EmpresaSoap" />
+            <endpoint address="http://localhost:52755/Process_Cuenta.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
+                contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />
+            <endpoint address="http://localhost:52755/Process_Usuario.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_UsuarioSoap"
+                contract="ServiceProcess_Usuario.Process_UsuarioSoap" name="Process_UsuarioSoap" />
+            <endpoint address="http://localhost:52755/Process_Rol.asmx" binding="basicHttpBinding"
+                bindingConfiguration="Process_RolSoap" contract="ServiceProcess_Rol.Process_RolSoap"
+                name="Process_RolSoap" />            
+        </client>
+    </system.serviceModel>
 </configuration>
