Programacion de Mantenedor Empresa Completo

--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -10,6 +10,10 @@
                 <binding name="Process_CuentaSoap" />
                 <binding name="Process_UsuarioSoap" />
                 <binding name="Process_RolSoap" />
+                <binding name="Process_RegionSoap" />
+                <binding name="Process_ProvinciaSoap" />
+                <binding name="Process_ComunaSoap" />
+                <binding name="Process_ValidadoresSoap" />
             </basicHttpBinding>
             <customBinding>
                 <binding name="Process_EmpresaSoap12">
@@ -28,12 +32,25 @@
                     <textMessageEncoding messageVersion="Soap12" />
                     <httpTransport />
                 </binding>
+                <binding name="Process_RegionSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+                <binding name="Process_ProvinciaSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+                <binding name="Process_ComunaSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+                <binding name="Process_ValidadoresSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
             </customBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:52755/Process_Empresa.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_EmpresaSoap"
-                contract="ServiceProcess_Empresa.Process_EmpresaSoap" name="Process_EmpresaSoap" />
             <endpoint address="http://localhost:52755/Process_Cuenta.asmx"
                 binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
                 contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />
@@ -42,7 +59,24 @@
                 contract="ServiceProcess_Usuario.Process_UsuarioSoap" name="Process_UsuarioSoap" />
             <endpoint address="http://localhost:52755/Process_Rol.asmx" binding="basicHttpBinding"
                 bindingConfiguration="Process_RolSoap" contract="ServiceProcess_Rol.Process_RolSoap"
-                name="Process_RolSoap" />            
+                name="Process_RolSoap" />
+            <endpoint address="http://localhost:52755/Process_Empresa.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_EmpresaSoap"
+                contract="ServiceProcess_Empresa.Process_EmpresaSoap" name="Process_EmpresaSoap" />
+            <endpoint address="http://localhost:52755/Process_Region.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_RegionSoap"
+                contract="ServiceProcess_Region.Process_RegionSoap" name="Process_RegionSoap" />
+            <endpoint address="http://localhost:52755/Process_Provincia.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_ProvinciaSoap"
+                contract="ServiceProcess_Provincia.Process_ProvinciaSoap"
+                name="Process_ProvinciaSoap" />
+            <endpoint address="http://localhost:52755/Process_Comuna.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_ComunaSoap"
+                contract="ServiceProcess_Comuna.Process_ComunaSoap" name="Process_ComunaSoap" />
+            <endpoint address="http://localhost:52755/Process_Validadores.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_ValidadoresSoap"
+                contract="ServiceProcess_Validadores.Process_ValidadoresSoap"
+                name="Process_ValidadoresSoap" />
         </client>
     </system.serviceModel>
 </configuration>
