Desarrollo de Mantenedor Unidad

--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -14,6 +14,7 @@
                 <binding name="Process_ProvinciaSoap" />
                 <binding name="Process_ComunaSoap" />
                 <binding name="Process_ValidadoresSoap" />
+                <binding name="Process_UnidadSoap" />
             </basicHttpBinding>
             <customBinding>
                 <binding name="Process_EmpresaSoap12">
@@ -48,6 +49,10 @@
                     <textMessageEncoding messageVersion="Soap12" />
                     <httpTransport />
                 </binding>
+                <binding name="Process_UnidadSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
             </customBinding>
         </bindings>
         <client>
@@ -77,6 +82,9 @@
                 binding="basicHttpBinding" bindingConfiguration="Process_ValidadoresSoap"
                 contract="ServiceProcess_Validadores.Process_ValidadoresSoap"
                 name="Process_ValidadoresSoap" />
+            <endpoint address="http://localhost:52755/Process_Unidad.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_UnidadSoap"
+                contract="ServiceProcess_Unidad.Process_UnidadSoap" name="Process_UnidadSoap" />
         </client>
     </system.serviceModel>
 </configuration>
