Desarrollo de Mantenedor de Cargo

--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -15,6 +15,7 @@
                 <binding name="Process_ComunaSoap" />
                 <binding name="Process_ValidadoresSoap" />
                 <binding name="Process_UnidadSoap" />
+                <binding name="Process_CargoSoap" />
             </basicHttpBinding>
             <customBinding>
                 <binding name="Process_EmpresaSoap12">
@@ -53,6 +54,10 @@
                     <textMessageEncoding messageVersion="Soap12" />
                     <httpTransport />
                 </binding>
+                <binding name="Process_CargoSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
             </customBinding>
         </bindings>
         <client>
@@ -85,6 +90,9 @@
             <endpoint address="http://localhost:52755/Process_Unidad.asmx"
                 binding="basicHttpBinding" bindingConfiguration="Process_UnidadSoap"
                 contract="ServiceProcess_Unidad.Process_UnidadSoap" name="Process_UnidadSoap" />
+            <endpoint address="http://localhost:52755/Process_Cargo.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_CargoSoap"
+                contract="ServiceProcess_Cargo.Process_CargoSoap" name="Process_CargoSoap" />
         </client>
     </system.serviceModel>
 </configuration>
