Desarrollo de Mantenedor Usuario

--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -16,6 +16,7 @@
                 <binding name="Process_ValidadoresSoap" />
                 <binding name="Process_UnidadSoap" />
                 <binding name="Process_CargoSoap" />
+                <binding name="Process_CargosUsuariosSoap" />
             </basicHttpBinding>
             <customBinding>
                 <binding name="Process_EmpresaSoap12">
@@ -58,15 +59,16 @@
                     <textMessageEncoding messageVersion="Soap12" />
                     <httpTransport />
                 </binding>
+                <binding name="Process_CargosUsuariosSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
             </customBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:52755/Process_Cuenta.asmx"
                 binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
                 contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />
-            <endpoint address="http://localhost:52755/Process_Usuario.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_UsuarioSoap"
-                contract="ServiceProcess_Usuario.Process_UsuarioSoap" name="Process_UsuarioSoap" />
             <endpoint address="http://localhost:52755/Process_Rol.asmx" binding="basicHttpBinding"
                 bindingConfiguration="Process_RolSoap" contract="ServiceProcess_Rol.Process_RolSoap"
                 name="Process_RolSoap" />
@@ -83,16 +85,23 @@
             <endpoint address="http://localhost:52755/Process_Comuna.asmx"
                 binding="basicHttpBinding" bindingConfiguration="Process_ComunaSoap"
                 contract="ServiceProcess_Comuna.Process_ComunaSoap" name="Process_ComunaSoap" />
-            <endpoint address="http://localhost:52755/Process_Validadores.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Process_ValidadoresSoap"
-                contract="ServiceProcess_Validadores.Process_ValidadoresSoap"
-                name="Process_ValidadoresSoap" />
             <endpoint address="http://localhost:52755/Process_Unidad.asmx"
                 binding="basicHttpBinding" bindingConfiguration="Process_UnidadSoap"
                 contract="ServiceProcess_Unidad.Process_UnidadSoap" name="Process_UnidadSoap" />
             <endpoint address="http://localhost:52755/Process_Cargo.asmx"
                 binding="basicHttpBinding" bindingConfiguration="Process_CargoSoap"
                 contract="ServiceProcess_Cargo.Process_CargoSoap" name="Process_CargoSoap" />
+            <endpoint address="http://localhost:52755/Process_Validadores.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_ValidadoresSoap"
+                contract="ServiceProcess_Validadores.Process_ValidadoresSoap"
+                name="Process_ValidadoresSoap" />
+            <endpoint address="http://localhost:52755/Process_Usuario.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_UsuarioSoap"
+                contract="ServiceProcess_Usuario.Process_UsuarioSoap" name="Process_UsuarioSoap" />
+            <endpoint address="http://localhost:52755/Process_CargosUsuarios.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_CargosUsuariosSoap"
+                contract="ServiceProcess_CargosUsuarios.Process_CargosUsuariosSoap"
+                name="Process_CargosUsuariosSoap" />
         </client>
     </system.serviceModel>
 </configuration>
