--- a/Process_APP_Desk/Process_APP_Desk.csproj
+++ b/Process_APP_Desk/Process_APP_Desk.csproj
@@ -57,6 +57,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connected Services\ServiceProcess_CargosUsuarios\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\ServiceProcess_Cargo\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -125,11 +130,11 @@
     <Compile Include="FormEmpresa.Designer.cs">
       <DependentUpon>FormEmpresa.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormPerfil.cs">
+    <Compile Include="FormRol.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormPerfil.Designer.cs">
-      <DependentUpon>FormPerfil.cs</DependentUpon>
+    <Compile Include="FormRol.Designer.cs">
+      <DependentUpon>FormRol.cs</DependentUpon>
     </Compile>
     <Compile Include="FormUnidad.cs">
       <SubType>Form</SubType>
@@ -178,8 +183,8 @@
     <EmbeddedResource Include="FormEmpresa.resx">
       <DependentUpon>FormEmpresa.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormPerfil.resx">
-      <DependentUpon>FormPerfil.cs</DependentUpon>
+    <EmbeddedResource Include="FormRol.resx">
+      <DependentUpon>FormRol.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormUnidad.resx">
       <DependentUpon>FormUnidad.cs</DependentUpon>
@@ -209,6 +214,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="Connected Services\ServiceProcess_CargosUsuarios\Process_CargosUsuarios.wsdl" />
     <None Include="Connected Services\ServiceProcess_Cargo\Process_APP_Desk.ServiceProcess_Cargo.Cargo.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -335,6 +341,7 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\ServiceProcess_CargosUsuarios\" />
     <WCFMetadataStorage Include="Connected Services\ServiceProcess_Cargo\" />
     <WCFMetadataStorage Include="Connected Services\ServiceProcess_Comuna\" />
     <WCFMetadataStorage Include="Connected Services\ServiceProcess_Cuenta\" />
@@ -492,6 +499,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\ServiceProcess_Cargo\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceProcess_CargosUsuarios\Process_CargosUsuarios.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceProcess_CargosUsuarios\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceProcess_CargosUsuarios\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceProcess_CargosUsuarios\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
