--- a/Process_APP_Desk/App.config
+++ b/Process_APP_Desk/App.config
@@ -17,6 +17,8 @@
                 <binding name="Process_UnidadSoap" />
                 <binding name="Process_CargoSoap" />
                 <binding name="Process_CargosUsuariosSoap" />
+                <binding name="Process_PermisosSoap" />
+                <binding name="Process_AccesoSoap" />
             </basicHttpBinding>
             <customBinding>
                 <binding name="Process_EmpresaSoap12">
@@ -63,15 +65,20 @@
                     <textMessageEncoding messageVersion="Soap12" />
                     <httpTransport />
                 </binding>
+                <binding name="Process_PermisosSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+                <binding name="Process_AccesoSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
             </customBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:52755/Process_Cuenta.asmx"
                 binding="basicHttpBinding" bindingConfiguration="Process_CuentaSoap"
                 contract="ServiceProcess_Cuenta.Process_CuentaSoap" name="Process_CuentaSoap" />
-            <endpoint address="http://localhost:52755/Process_Rol.asmx" binding="basicHttpBinding"
-                bindingConfiguration="Process_RolSoap" contract="ServiceProcess_Rol.Process_RolSoap"
-                name="Process_RolSoap" />
             <endpoint address="http://localhost:52755/Process_Empresa.asmx"
                 binding="basicHttpBinding" bindingConfiguration="Process_EmpresaSoap"
                 contract="ServiceProcess_Empresa.Process_EmpresaSoap" name="Process_EmpresaSoap" />
@@ -102,6 +109,15 @@
                 binding="basicHttpBinding" bindingConfiguration="Process_CargosUsuariosSoap"
                 contract="ServiceProcess_CargosUsuarios.Process_CargosUsuariosSoap"
                 name="Process_CargosUsuariosSoap" />
+            <endpoint address="http://localhost:52755/Process_Acceso.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_AccesoSoap"
+                contract="ServiceProcess_Acceso.Process_AccesoSoap" name="Process_AccesoSoap" />
+            <endpoint address="http://localhost:52755/Process_Permisos.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Process_PermisosSoap"
+                contract="ServiceProcess_Permisos.Process_PermisosSoap" name="Process_PermisosSoap" />
+            <endpoint address="http://localhost:52755/Process_Rol.asmx" binding="basicHttpBinding"
+                bindingConfiguration="Process_RolSoap" contract="ServiceProcess_Rol.Process_RolSoap"
+                name="Process_RolSoap" />
         </client>
     </system.serviceModel>
 </configuration>
